src/compiler/gen/simple2Parser.ts
// Generated from src/compiler/simple2.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import simple2Listener from "./simple2Listener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class simple2Parser extends Parser {
	public static readonly IFEXPR = 1;
	public static readonly ELIFEXPR = 2;
	public static readonly ELSE = 3;
	public static readonly END = 4;
	public static readonly WHILE = 5;
	public static readonly UNTIL = 6;
	public static readonly DO = 7;
	public static readonly COMMENT = 8;
	public static readonly SUBEXPR = 9;
	public static readonly EXPR = 10;
	public static readonly LOCAL = 11;
	public static readonly SET = 12;
	public static readonly DEFINE = 13;
	public static readonly GLOBAL = 14;
	public static readonly LABEL = 15;
	public static readonly TRUE = 16;
	public static readonly FALSE = 17;
	public static readonly CHOICE = 18;
	public static readonly NULL = 19;
	public static readonly IDENTIFIER = 20;
	public static readonly PLUSMINUS = 21;
	public static readonly NUMBER = 22;
	public static readonly WHITESPACE = 23;
	public static readonly STRING = 24;
	public static readonly HEX_DIGIT = 25;
	public static readonly EQUALS = 26;
	public static readonly EOL = 27;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_prog = 0;
	public static readonly RULE_line = 1;
	public static readonly RULE_ifBlock = 2;
	public static readonly RULE_elifBlock = 3;
	public static readonly RULE_elseBlock = 4;
	public static readonly RULE_doBlock = 5;
	public static readonly RULE_whileBlock = 6;
	public static readonly RULE_command = 7;
	public static readonly RULE_commandName = 8;
	public static readonly RULE_commandArgs = 9;
	public static readonly RULE_localVar = 10;
	public static readonly RULE_globalVar = 11;
	public static readonly RULE_setVar = 12;
	public static readonly RULE_label = 13;
	public static readonly RULE_exprstmt = 14;
	public static readonly RULE_comment = 15;
	public static readonly RULE_ifexpr = 16;
	public static readonly RULE_value = 17;
	public static readonly RULE_number = 18;
	public static readonly RULE_boolean = 19;
	public static readonly RULE_null = 20;
	public static readonly RULE_string = 21;
	public static readonly RULE_subexpr = 22;
	public static readonly RULE_whitespace = 23;
	public static readonly RULE_choiceBlock = 24;
	public static readonly RULE_choiceOpt = 25;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            null, "'else'", 
                                                            "'end'", null, 
                                                            null, "'do'", 
                                                            null, null, 
                                                            null, "'local'", 
                                                            "'set'", "'define'", 
                                                            "'global'", 
                                                            null, "'true'", 
                                                            "'false'", "'choice'", 
                                                            "'null'", null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, "'='" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "IFEXPR", 
                                                             "ELIFEXPR", 
                                                             "ELSE", "END", 
                                                             "WHILE", "UNTIL", 
                                                             "DO", "COMMENT", 
                                                             "SUBEXPR", 
                                                             "EXPR", "LOCAL", 
                                                             "SET", "DEFINE", 
                                                             "GLOBAL", "LABEL", 
                                                             "TRUE", "FALSE", 
                                                             "CHOICE", "NULL", 
                                                             "IDENTIFIER", 
                                                             "PLUSMINUS", 
                                                             "NUMBER", "WHITESPACE", 
                                                             "STRING", "HEX_DIGIT", 
                                                             "EQUALS", "EOL" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"prog", "line", "ifBlock", "elifBlock", "elseBlock", "doBlock", "whileBlock", 
		"command", "commandName", "commandArgs", "localVar", "globalVar", "setVar", 
		"label", "exprstmt", "comment", "ifexpr", "value", "number", "boolean", 
		"null", "string", "subexpr", "whitespace", "choiceBlock", "choiceOpt",
	];
	public get grammarFileName(): string { return "simple2.g4"; }
	public get literalNames(): (string | null)[] { return simple2Parser.literalNames; }
	public get symbolicNames(): (string | null)[] { return simple2Parser.symbolicNames; }
	public get ruleNames(): string[] { return simple2Parser.ruleNames; }
	public get serializedATN(): number[] { return simple2Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, simple2Parser._ATN, simple2Parser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public prog(): ProgContext {
		let localctx: ProgContext = new ProgContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, simple2Parser.RULE_prog);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 58;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 1, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					this.state = 56;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case 1:
					case 5:
					case 7:
					case 8:
					case 10:
					case 11:
					case 12:
					case 14:
					case 15:
					case 18:
					case 20:
					case 23:
						{
						this.state = 52;
						this.line();
						this.state = 53;
						this.match(simple2Parser.EOL);
						}
						break;
					case 27:
						{
						this.state = 55;
						this.match(simple2Parser.EOL);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}
				this.state = 60;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 1, this._ctx);
			}
			this.state = 62;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 9756066) !== 0)) {
				{
				this.state = 61;
				this.line();
				}
			}

			this.state = 64;
			this.match(simple2Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public line(): LineContext {
		let localctx: LineContext = new LineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, simple2Parser.RULE_line);
		let _la: number;
		try {
			this.state = 82;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 66;
				this.label();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 67;
				this.exprstmt();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 68;
				this.command();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 69;
				this.comment();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 70;
				this.ifBlock();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 71;
				this.doBlock();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 72;
				this.whileBlock();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 73;
				this.localVar();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 74;
				this.globalVar();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 75;
				this.setVar();
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 76;
				this.choiceBlock();
				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 78;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 77;
					this.whitespace();
					}
					}
					this.state = 80;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la===23);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public ifBlock(): IfBlockContext {
		let localctx: IfBlockContext = new IfBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, simple2Parser.RULE_ifBlock);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 85;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 84;
				this.whitespace();
				}
			}

			this.state = 87;
			this.match(simple2Parser.IFEXPR);
			this.state = 88;
			this.match(simple2Parser.EOL);
			this.state = 94;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 89;
					this.line();
					this.state = 90;
					this.match(simple2Parser.EOL);
					}
					}
				}
				this.state = 96;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
			}
			this.state = 100;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 97;
					this.elifBlock();
					}
					}
				}
				this.state = 102;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
			}
			this.state = 104;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				{
				this.state = 103;
				this.elseBlock();
				}
				break;
			}
			this.state = 107;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 106;
				this.whitespace();
				}
			}

			this.state = 109;
			this.match(simple2Parser.END);
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8 || _la===23) {
				{
				this.state = 110;
				this.comment();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public elifBlock(): ElifBlockContext {
		let localctx: ElifBlockContext = new ElifBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, simple2Parser.RULE_elifBlock);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 114;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 113;
				this.whitespace();
				}
			}

			this.state = 116;
			this.match(simple2Parser.ELIFEXPR);
			this.state = 117;
			this.match(simple2Parser.EOL);
			this.state = 123;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 118;
					this.line();
					this.state = 119;
					this.match(simple2Parser.EOL);
					}
					}
				}
				this.state = 125;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public elseBlock(): ElseBlockContext {
		let localctx: ElseBlockContext = new ElseBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, simple2Parser.RULE_elseBlock);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 127;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 126;
				this.whitespace();
				}
			}

			this.state = 129;
			this.match(simple2Parser.ELSE);
			this.state = 131;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8 || _la===23) {
				{
				this.state = 130;
				this.comment();
				}
			}

			this.state = 133;
			this.match(simple2Parser.EOL);
			this.state = 139;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 15, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 134;
					this.line();
					this.state = 135;
					this.match(simple2Parser.EOL);
					}
					}
				}
				this.state = 141;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 15, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public doBlock(): DoBlockContext {
		let localctx: DoBlockContext = new DoBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, simple2Parser.RULE_doBlock);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 143;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 142;
				this.whitespace();
				}
			}

			this.state = 145;
			this.match(simple2Parser.DO);
			this.state = 147;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8 || _la===23) {
				{
				this.state = 146;
				this.comment();
				}
			}

			this.state = 149;
			this.match(simple2Parser.EOL);
			this.state = 155;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 18, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 150;
					this.line();
					this.state = 151;
					this.match(simple2Parser.EOL);
					}
					}
				}
				this.state = 157;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 18, this._ctx);
			}
			this.state = 159;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 158;
				this.whitespace();
				}
			}

			this.state = 161;
			this.match(simple2Parser.UNTIL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public whileBlock(): WhileBlockContext {
		let localctx: WhileBlockContext = new WhileBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, simple2Parser.RULE_whileBlock);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 164;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 163;
				this.whitespace();
				}
			}

			this.state = 166;
			this.match(simple2Parser.WHILE);
			this.state = 167;
			this.match(simple2Parser.EOL);
			this.state = 173;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 21, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 168;
					this.line();
					this.state = 169;
					this.match(simple2Parser.EOL);
					}
					}
				}
				this.state = 175;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 21, this._ctx);
			}
			this.state = 177;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 176;
				this.whitespace();
				}
			}

			this.state = 179;
			this.match(simple2Parser.END);
			this.state = 181;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8 || _la===23) {
				{
				this.state = 180;
				this.comment();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public command(): CommandContext {
		let localctx: CommandContext = new CommandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, simple2Parser.RULE_command);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 184;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 183;
				this.whitespace();
				}
			}

			this.state = 186;
			this.commandName();
			this.state = 188;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 25, this._ctx) ) {
			case 1:
				{
				this.state = 187;
				this.commandArgs();
				}
				break;
			}
			this.state = 192;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 26, this._ctx) ) {
			case 1:
				{
				this.state = 190;
				this.ifexpr();
				}
				break;
			case 2:
				{
				this.state = 191;
				this.comment();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public commandName(): CommandNameContext {
		let localctx: CommandNameContext = new CommandNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, simple2Parser.RULE_commandName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 194;
			this.match(simple2Parser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public commandArgs(): CommandArgsContext {
		let localctx: CommandArgsContext = new CommandArgsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, simple2Parser.RULE_commandArgs);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 196;
			this.whitespace();
			this.state = 197;
			this.value();
			this.state = 203;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 27, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 198;
					this.whitespace();
					this.state = 199;
					this.value();
					}
					}
				}
				this.state = 205;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 27, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public localVar(): LocalVarContext {
		let localctx: LocalVarContext = new LocalVarContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, simple2Parser.RULE_localVar);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 207;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 206;
				this.whitespace();
				}
			}

			this.state = 209;
			this.match(simple2Parser.LOCAL);
			this.state = 210;
			this.whitespace();
			this.state = 211;
			this.match(simple2Parser.IDENTIFIER);
			this.state = 213;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 212;
				this.whitespace();
				}
			}

			this.state = 215;
			this.match(simple2Parser.EQUALS);
			this.state = 217;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 216;
				this.whitespace();
				}
			}

			this.state = 219;
			this.value();
			this.state = 221;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8 || _la===23) {
				{
				this.state = 220;
				this.comment();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public globalVar(): GlobalVarContext {
		let localctx: GlobalVarContext = new GlobalVarContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, simple2Parser.RULE_globalVar);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 224;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 223;
				this.whitespace();
				}
			}

			this.state = 226;
			this.match(simple2Parser.GLOBAL);
			this.state = 227;
			this.whitespace();
			this.state = 228;
			this.match(simple2Parser.IDENTIFIER);
			this.state = 230;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 229;
				this.whitespace();
				}
			}

			this.state = 232;
			this.match(simple2Parser.EQUALS);
			this.state = 234;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 233;
				this.whitespace();
				}
			}

			this.state = 236;
			this.value();
			this.state = 238;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8 || _la===23) {
				{
				this.state = 237;
				this.comment();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public setVar(): SetVarContext {
		let localctx: SetVarContext = new SetVarContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, simple2Parser.RULE_setVar);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 241;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 240;
				this.whitespace();
				}
			}

			this.state = 243;
			this.match(simple2Parser.SET);
			this.state = 244;
			this.whitespace();
			this.state = 245;
			this.match(simple2Parser.IDENTIFIER);
			this.state = 247;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 246;
				this.whitespace();
				}
			}

			this.state = 249;
			this.match(simple2Parser.EQUALS);
			this.state = 251;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 250;
				this.whitespace();
				}
			}

			this.state = 253;
			this.value();
			this.state = 255;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8 || _la===23) {
				{
				this.state = 254;
				this.comment();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public label(): LabelContext {
		let localctx: LabelContext = new LabelContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, simple2Parser.RULE_label);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 258;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 257;
				this.whitespace();
				}
			}

			this.state = 260;
			this.match(simple2Parser.LABEL);
			this.state = 262;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8 || _la===23) {
				{
				this.state = 261;
				this.comment();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public exprstmt(): ExprstmtContext {
		let localctx: ExprstmtContext = new ExprstmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, simple2Parser.RULE_exprstmt);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 265;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 264;
				this.whitespace();
				}
			}

			this.state = 267;
			this.match(simple2Parser.EXPR);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public comment(): CommentContext {
		let localctx: CommentContext = new CommentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, simple2Parser.RULE_comment);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 270;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 269;
				this.whitespace();
				}
			}

			this.state = 272;
			this.match(simple2Parser.COMMENT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public ifexpr(): IfexprContext {
		let localctx: IfexprContext = new IfexprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, simple2Parser.RULE_ifexpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 275;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 274;
				this.whitespace();
				}
			}
